--- a/css/side-bar.css
+++ b/css/side-bar.css
@@ -20,7 +20,7 @@
     gap: 10px;
 }
 .side-bar li {
-    padding: 20px 50px;
+    padding: 0;
     transition: 0.3s;
 }
 .side-bar li:hover {
@@ -30,9 +30,13 @@
 .side-bar li:active {
     background-color: #C3A885;
 }
-.side-bar a{
+.side-bar a {
     text-decoration: none;
     color: black;
+    display: block;
+    padding: 20px 50px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 /* logout button for admin */
